data/derived/comb/progs/unify/prog3334.ml.out
Characters 55-64:
  digitalRoot sumDigits n
              ^^^^^^^^^
Error: This expression has type int -> int
       but an expression was expected of type int
